--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <header>
-        <h1>Welcome to My Website</h1>
+        <h1 th:text="${message}">Welcome to My Website</h1>
     </header>
     <main>
         <p>This is a basic HTML5 template.</p>
